Fixed hero font-size on mobile

--- a/src/sass/_base/_typeography.scss
+++ b/src/sass/_base/_typeography.scss
@@ -40,7 +40,12 @@ a {
 
 .hero {
   .title {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    
+    @include mq($from: tablet) {
+      font-size: 2.5rem;
+    }
+
     line-height: 1.25;
     color: $black;
 
